[project]
name = "geo-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pypdf>=6.13.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
